# chase-dski

./: Makefile  README.md  eecs750_outline.rst
docs/: current_issues.rst  strace_notes.rst
include/linux/kusp/: dski_trace.h
kmod/: Makefile  dski_trace.c
tests/phase0/: CMakeLists.txt  Makefile  obsrv_alarm.c  obsrv_debug.h  obsrv_getcwd.c  obsrv_getegid.c  obsrv_geteuid.c  obsrv_getpid.c  obsrv_gettimeofday.c  obsrv_nanosleep.c  obsrv_sync.c  obsrv_write.c
tests/postprocess/: chase-pp.py  perf.py  syscall-count.py
tests/postprocess/syscalldb/: gensyscallargstable.py  gensyscallnumbers.py  syscallargstable.py  syscalldatatoxml.py  syscallnumbers.py  syscalls_by_name.xml  syscalls_by_number.xml  xcheck.py
tests/postprocess/syscalldb/old/: fmt.py  parsesyscalldefs.py  parsesyscalldefssmart.py  syscalls.py  syscallsdefs.txt  systable.py
tests/postprocess/syscalldb/strace/: ioctl_entries_asm_generic.h  ioctrl_entries.h  syscall_entry_flags.h
tracing/: chase.py  monitorsys.py
